Atualizado macros da probe, telegram-bot, etc.

--- a/KlipperScreen.conf
+++ b/KlipperScreen.conf
@@ -3,6 +3,7 @@ theme = material-light
 print_estimate_method = slicer
 screen_blanking = 900
 use_dpms = True
+job_complete_timeout: 30
 
 [printer V2.3125]
 titlebar_items: chamber
@@ -14,22 +15,20 @@ extruder: 250
 gcode: BUCKET_POSITION
 
 [displayed_macros V2.3125]
-attach_probe = False
 bed_mesh_calibrate = False
 cancel_print = False
-dock_probe = False
 global = False
 m109 = False
 m18 = False
 m190 = False
 m84 = False
-pause = False
+; pause = False
 print_end = False
 print_start = False
 probe_accuracy = False
 probe_calibrate = False
 quad_gantry_level = False
-resume = False
+; resume = False
 set_temp_calibration = False
 status_busy = False
 status_calibrating_z = False
