--- a/lights.cfg
+++ b/lights.cfg
@@ -8,6 +8,11 @@ pwm:            true
 shutdown_value: 0
 cycle_time:     0.001
 
+[gcode_macro CHAMBERLIGHT]
+gcode:
+    {% set VAL = params.VAL|default(0)|float %}
+    SET_PIN PIN=chamberlight VALUE={VAL}
+
 [gcode_macro CHAMBERLIGHT_OFF]
 gcode:
     SET_PIN PIN=chamberlight VALUE=0.0
