--- a/macros.cfg
+++ b/macros.cfg
@@ -3,11 +3,11 @@
 #####################################################################
 
 [gcode_macro global]
-variable_has_attachable_probe:      False
+variable_has_attachable_probe:      True
 
-variable_extruder_calibration_temp: 50
+variable_extruder_calibration_temp: 150
 
-variable_print_end_clean_delays:    25,10,10,10,15,20
+variable_print_end_clean_temps:     200,190,180,170
 
 variable_moving_macros_slow_fr:     2400    ; 40
 variable_moving_macros_fr:          4800    ; 80
@@ -15,23 +15,29 @@ variable_moving_macros_fast_fr:     18000   ; 300
 
 variable_retraction_fr:             1800    ; 30
 variable_retraction_fast_fr:        3600    ; 60
+variable_retraction_fastest_fr:     7200    ; 120
 
 variable_extrude_fr:                180     ; 3
 variable_extrude_fast_fr:           300     ; 5
 
 variable_safe_z_rise:               5
-variable_bucket_l_pos_x:            45
+variable_bucket_l_pos_x:            5
 variable_bucket_l_pos_y:            307
 variable_bucket_l_pos_z:            0.2
 variable_bucket_r_pos_x:            107
 variable_bucket_r_pos_y:            307
 variable_bucket_r_pos_z:            0.2
 
+variable_purge_pos_x:               45
+
 variable_brush_pos_x:               56
 variable_brush_pos_y:               307
 variable_brush_pos_z:               1.6
 variable_brush_width:               36
 variable_brush_depth:               8
+
+variable_retract_on_pause:          1
+variable_z_rise_on_pause:           60
 
 gcode:
     ; Nothing
@@ -192,7 +198,7 @@ gcode:
         {% set nside = -1 if RIGHT else 1 %}
 
         G91
-        {% for _ in range(3) %}
+        {% for _ in range(5) %}
             G1 X{b_segm * nside}     Y-{b_depth} F{g.moving_macros_fast_fr}
             G1 X{b_segm * 2 * nside} Y{b_depth}
             G1 X{b_segm * 2 * nside} Y-{b_depth}
@@ -232,10 +238,7 @@ gcode:
         M83
         G92 E0
         G90
-        G1 X{ range(3, 6) | random } E20 F{g.extrude_fr}
-        G1 Z0.2 F{g.moving_macros_fr}
-        G1 Y295 F{g.moving_macros_slow_fr}     ; Move nozzle to cut the purged filament
-        G1 Y270 F{g.moving_macros_fr}
+        G1 X{g.purge_pos_x} E20 F{g.extrude_fr}
         G92 E0
         M117
         RESTORE_GCODE_STATE NAME=purge
@@ -249,22 +252,35 @@ gcode:
 [gcode_macro PRINT_START]
 gcode:
     {% set BED = params.BED|default(100)|int %}
-    {% set EXTRUDER = params.EXTRUDER|default(240)|int %}
-    {% set CHAMBER = params.CHAMBER|default(60)|int %}
+    {% set EXTRUDER = params.EXTRUDER|default(250)|int %}
+    {% set CHAMBER = params.CHAMBER|default(30)|int %}
+    {% set BED_MESH = params.BED_MESH %}
     {% set Z_OFFSET = params.Z_OFFSET %}
 
     {% if printer['output_pin chamberlight'].value <= 0 %}
-        CHAMBERLIGHT_25
+        CHAMBERLIGHT VAL=.1
     {% endif %}
+
+    M117 Profile='{BED_MESH}'
 
     {% if not "xyz" in printer.toolhead.homed_axes or not printer.quad_gantry_level.applied %}
         G32                         ; Get moving ready
     {% endif %}
 
-    ; Apply Z offset after homing
+    {% if BED_MESH is defined and BED_MESH|length %}
+        BED_MESH_PROFILE LOAD={BED_MESH}
+    {% endif %}
+
+    M140 S{BED}                     ; Set bed temperature
+    SET_CALIBRATION_TEMP EXTRUDER=1 ; Set extruder calibration temperature
+    M190 S{BED}                     ; Wait bed temperature before calibrating Z
+
+    CALIBRATE_Z
+
+    ; Apply Z offset after homing and Z Calibration
     {% if Z_OFFSET is defined %}
         M117 Applying Z Offset
-        SET_GCODE_OFFSET Z={Z_OFFSET} MOVE=1
+        SET_GCODE_OFFSET Z_ADJUST={Z_OFFSET} MOVE=1
     {% endif %}
 
     M104 S{EXTRUDER}                ; Set temperatures
@@ -275,7 +291,6 @@ gcode:
     M117 Waiting to reach temperature
 
     M109 S{EXTRUDER}                ; Wait for temperatures
-    M190 S{BED}
 
     PURGE_NOZZLE
     CLEAN_NOZZLE RIGHT=0
@@ -287,13 +302,12 @@ gcode:
 gcode:
     {% set g = printer["gcode_macro global"] %}
 
-    M400                                        ; wait for buffer to clear
-    SET_GCODE_OFFSET Z=0 MOVE=1                 ; reset Z offset
     G91                                         ; relative positioning
     G1 Z{g.safe_z_rise} F{g.moving_macros_fr}   ; move nozzle to remove stringing
+    SET_GCODE_OFFSET Z=0 MOVE=1                 ; reset Z offset
+    M400                                        ; wait for buffer to clear
     G92 E0                                      ; zero the extruder
     G1 E-10.0 F{g.retraction_fast_fr}           ; retract filament
-    M106 S0                                     ; Turn off fan
     TURN_OFF_HEATERS
 
     ; Clean nozzle on cooldown(Allow next print to start automatically, nozzle clean to home Z)
@@ -301,9 +315,10 @@ gcode:
     BUCKET_POSITION RIGHT=1                     ; position the nozzle in the bucket
 
     M117 Cleaning extruder
-    {% for delay in g.print_end_clean_delays %}
+    M106 S255
+    {% for temp in g.print_end_clean_temps %}
         BUCKET_POSITION RIGHT=1
-        G4 P{delay * 1000}
+        M109 S{temp}
         CLEAN_NOZZLE RIGHT=1
     {% endfor %}
     M117 Print finished
@@ -314,19 +329,45 @@ gcode:
     STATUS_OFF
     CHAMBERLIGHT_OFF
 
-[gcode_macro SKIRT_START]
-variable_inside: False
+[gcode_macro CANCEL_PRINT]
+description: Cancel the actual running print
+rename_existing: CANCEL_PRINT_
 gcode:
-    SAVE_GCODE_STATE NAME=before_skirt
-    SET_GCODE_VARIABLE MACRO=SKIRT_START VARIABLE=inside VALUE=True
-    M220 S25
+    CANCEL_PRINT_
+    CLEAR_PAUSE
+    PRINT_END
 
-[gcode_macro SKIRT_END]
+[gcode_macro PAUSE]
+description: Pause the actual running print
+rename_existing: PAUSE_
 gcode:
-    {% if printer["gcode_macro SKIRT_START"].inside %}
-        RESTORE_GCODE_STATE NAME=before_skirt MOVE=0
-        SET_GCODE_VARIABLE MACRO=SKIRT_START VARIABLE=inside VALUE=False
-    {% endif %}
+    {% set g = printer["gcode_macro global"] %}
+    {% set z_max = printer.toolhead.axis_maximum.z %}
+
+    PAUSE_
+
+    M83
+    G1 E-{g.retract_on_pause} F{g.retraction_fr}    ; Try to stop ozzing
+
+    G91
+    G1 Z{z_max} F{g.moving_macros_fr}   ; Raise Z to a safe position before moving to the bucket position
+    BUCKET_POSITION
+
+[gcode_macro RESUME]
+description: RESUME the actual paused print
+rename_existing: RESUME_
+gcode:
+    {% set g = printer["gcode_macro global"] %}
+    {% set z_max = printer.toolhead.axis_maximum.z %}
+
+    PURGE_NOZZLE
+
+    G91
+    G1 Z{z_max} F{g.moving_macros_fr}   ; Position
+    M_CENTER
+
+    RESUME_
+
 
 #####################################################################
 #    Calibration, Homing and Gantry related
@@ -368,7 +409,9 @@ gcode:
         {% if EXTRUDER_TEMP > 0 %}
             M117 Setting Extruder temperature: {EXTRUDER_TEMP}C...
         {% endif %}
+        M106 S255
         M109 S{EXTRUDER_TEMP}    ; Wait for Extruder
+        M106 S0
     {% endif %}
 
 [gcode_macro G28]
@@ -400,7 +443,6 @@ gcode:
 
     {% if g.has_attachable_probe %}
         _CheckProbe action=query
-        G90
         Attach_Probe
     {% endif %}
 
@@ -425,12 +467,18 @@ description: Conform a moving, twistable gantry to the shape of a stationary bed
 gcode:
     {% set g = printer["gcode_macro global"] %}
 
+    {% if not 'xyz' in printer.toolhead.homed_axes %}
+        { action_raise_error("Must Home X, Y and Z Axis First!") }
+    {% endif %}
+
     STATUS_LEVELING
 
     ; Position probe near the bed so we try to get a stable temperature in the probe
-    G90
-    M_CENTER
-    G0 Z3.5
+    {% if not g.has_attachable_probe %}
+        G90
+        M_CENTER
+        G1 Z3.5
+    {% endif %}
 
     SET_CALIBRATION_TEMP BED=1
 
@@ -506,16 +554,15 @@ gcode:
 
     BED_MESH_CLEAR
 
-    G28
-                                        ; will not wait for the extruder to heat up
+    {% if not 'xyz' in printer.toolhead.homed_axes %}
+        G28
+    {% endif %}
+
     SET_CALIBRATION_TEMP EXTRUDER=1     ; Set the extruder temperature so the next G28
     QUAD_GANTRY_LEVEL
 
-    G28
-
-    {% if BED_MESH %}
-        BED_MESH_PROFILE LOAD={BED_MESH}
-    {% endif %}
+    G28 Z
+    _SAFE_Z
 
 #####################################################################
 #    Filament routines
@@ -528,21 +575,20 @@ gcode:
     {% if not "xyz" in printer.toolhead.homed_axes %}
         { action_raise_error("Must Home X, Y and Z Axis First!") }
     {% else %}
-        {% if not printer.extruder.temperature >= 200 %}
+        {% if not printer.extruder.temperature >= 180 %}
             { action_raise_error("Heat up nozzle first!") }
         {% else %}
             SAVE_GCODE_STATE NAME=unload_filament
 
-            G90
-            G1 Z110 F{g.moving_macros_fr}
-            M_FRONT_CENTER
+            BUCKET_POSITION
 
             ; Extruder in relative mode
             M83
-            G1 E10 F{g.extrude_fast_fr}     ; extrude a little to soften new filament
             M117 Unloading
-            G1 E-45 F{g.retraction_fr}      ; retract filament completely
-            G1 E-45 F{g.retraction_fr}      ; retract filament completely
+            G1 E-10 F{g.retraction_fastest_fr}  ; retract filament from nozzle super fast
+            G1 E-10 F{g.retraction_fast_fr}     ; retract filament from nozzle
+            G1 E-35 F{g.retraction_fr}          ; ...
+            G1 E-35 F{g.retraction_fr}          ; retract filament completely
             M117
 
             RESTORE_GCODE_STATE NAME=unload_filament
@@ -572,16 +618,15 @@ gcode:
 
             M117 Loading
             G1 E10 F{g.extrude_fr}          ; extrude to fill the extruder
-            M117 Filling Extruder
-            G1 E35 F{g.extrude_fast_fr}     ; extrude to fill the extruder
+            M117 Replacing old filament
+            G1 E35 F{g.extrude_fast_fr}     ; replacing
             G1 E35 F{g.extrude_fast_fr}     ; ...
+            G1 E35 F{g.extrude_fr}          ; replacing slowly...
 
             PURGE_NOZZLE
             CLEAN_NOZZLE
 
             RESTORE_GCODE_STATE NAME=load_filament
-
-            G1 E-1 F{g.retraction_fr}       ; Retract outside the SAVE_GCODE_STATE
 
             M117
         {% endif %}
