--- a/printer.cfg
+++ b/printer.cfg
@@ -31,6 +31,8 @@ resolution: 0.05
 
 [respond]
 
+[pause_resume]
+
 #####################################################################
 #   Motors
 #####################################################################
@@ -114,22 +116,24 @@ max_temp: 80
 #####################################################################
 
 [safe_z_home]
-home_xy_position:   204.30,305.5
+home_xy_position:   204.30,303.5
 speed:              50
+z_hop_speed:        25
 z_hop:              15
 
 ##--------------------------------------------------------------------
 
 [probe]
+# 0.08 diferença entre 20C e 100C
 pin:                        ^PA3
 x_offset:                   0
 y_offset:                   25.0
-z_offset:                   3.196
-speed:                      5
-lift_speed:                 5
-samples:                    6
+z_offset:                   14.2
+speed:                      25
+lift_speed:                 25
+samples:                    10
 samples_result:             median
-sample_retract_dist:        5
+sample_retract_dist:        0.5
 samples_tolerance:          0.006
 samples_tolerance_retries:  10
 
@@ -145,7 +149,7 @@ points:
     250,225
     250,25
 speed:              300
-horizontal_move_z:  10
+horizontal_move_z:  20
 retries:            5
 retry_tolerance:    0.0075
 max_adjust:         10
@@ -154,7 +158,7 @@ max_adjust:         10
 
 [bed_mesh]
 speed: 300
-horizontal_move_z: 30
+horizontal_move_z: 15
 mesh_min: 40, 40
 mesh_max: 260, 260
 fade_start: 0.6
@@ -166,10 +170,20 @@ relative_reference_index: 12
 ##--------------------------------------------------------------------
 
 [z_calibration]
-nozzle_xy_position: 204.30,305.5
-switch_xy_position: 202.8,283.5
+nozzle_xy_position: 204.30,303.50
+switch_xy_position: 196.00,281.50
 bed_xy_position:    150,150
-switch_offset:      0.1
+switch_offset:      3.37
+speed:              300
+probing_speed:      25
+probing_second_speed: 25
+start_gcode:
+    Attach_Probe
+    ; Clear probe from the dock(Otherwise it will be kicked while probing nozzle)
+    G90
+    G1 X196
+end_gcode:
+    Dock_Probe
 
 #####################################################################
 #    Resonance
@@ -188,11 +202,47 @@ probe_points:
     150, 140, 20
 
 [input_shaper]
-# Measured on 17/04/2022 - 11:55
-shaper_type_x = 2hump_ei
-shaper_freq_x = 74.2
-shaper_type_y = 2hump_ei
-shaper_freq_y = 56.4
+# Measured on 25/07/2022 - 18:19
+# Printer with some corner brackets(left side and front)
+shaper_type_x = mzv
+shaper_freq_x = 55.0
+shaper_type_y = mzv
+shaper_freq_y = 40.8
+# Calculating the best input shaper parameters for x axis
+# Fitted shaper 'zv' frequency = 55.8 Hz (vibrations = 3.5%, smoothing ~= 0.056)
+# To avoid too much smoothing with 'zv', suggested max_accel <= 12100 mm/sec^2
+# Fitted shaper 'mzv' frequency = 55.0 Hz (vibrations = 0.8%, smoothing ~= 0.067)
+# To avoid too much smoothing with 'mzv', suggested max_accel <= 8900 mm/sec^2
+# Fitted shaper 'ei' frequency = 54.4 Hz (vibrations = 0.0%, smoothing ~= 0.109)
+# To avoid too much smoothing with 'ei', suggested max_accel <= 5500 mm/sec^2
+# Fitted shaper '2hump_ei' frequency = 58.8 Hz (vibrations = 0.0%, smoothing ~= 0.156)
+# To avoid too much smoothing with '2hump_ei', suggested max_accel <= 3800 mm/sec^2
+# Fitted shaper '3hump_ei' frequency = 104.8 Hz (vibrations = 0.0%, smoothing ~= 0.075)
+# To avoid too much smoothing with '3hump_ei', suggested max_accel <= 8000 mm/sec^2
+# Recommended shaper_type_x = mzv, shaper_freq_x = 55.0 Hz
+# Shaper calibration data written to /tmp/calibration_data_x_20220725_172420.csv file
+
+# Calculating the best input shaper parameters for y axis
+# Fitted shaper 'zv' frequency = 52.0 Hz (vibrations = 12.0%, smoothing ~= 0.063)
+# To avoid too much smoothing with 'zv', suggested max_accel <= 10500 mm/sec^2
+# Fitted shaper 'mzv' frequency = 40.8 Hz (vibrations = 0.1%, smoothing ~= 0.122)
+# To avoid too much smoothing with 'mzv', suggested max_accel <= 4900 mm/sec^2
+# Fitted shaper 'ei' frequency = 52.6 Hz (vibrations = 0.0%, smoothing ~= 0.116)
+# To avoid too much smoothing with 'ei', suggested max_accel <= 5200 mm/sec^2
+# Fitted shaper '2hump_ei' frequency = 65.4 Hz (vibrations = 0.0%, smoothing ~= 0.126)
+# To avoid too much smoothing with '2hump_ei', suggested max_accel <= 4800 mm/sec^2
+# Fitted shaper '3hump_ei' frequency = 78.2 Hz (vibrations = 0.0%, smoothing ~= 0.134)
+# To avoid too much smoothing with '3hump_ei', suggested max_accel <= 4500 mm/sec^2
+# Recommended shaper_type_y = mzv, shaper_freq_y = 40.8 Hz
+# Shaper calibration data written to /tmp/calibration_data_y_20220725_172420.csv file
+
+#####################################################################
+#    Filament
+#####################################################################
+
+# [filament_switch_sensor runout]
+# pause_on_runout: True
+# switch_pin: ^PA0
 
 #####################################################################
 #    Macros
@@ -213,11 +263,11 @@ shaper_freq_y = 56.4
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.039688, 0.067813, 0.028750, 0.005938, 0.046250
-#*# 	  -0.013437, 0.029375, 0.000000, 0.001875, 0.043750
-#*# 	  -0.017187, 0.026250, 0.000000, -0.000313, 0.036250
-#*# 	  -0.015625, 0.026875, -0.003125, -0.003125, 0.028125
-#*# 	  0.024375, 0.057812, 0.025000, 0.007812, 0.031562
+#*# 	  -0.003750, 0.010938, 0.014375, -0.011562, -0.003750
+#*# 	  -0.036250, -0.009687, -0.000937, -0.016250, -0.010625
+#*# 	  -0.041875, -0.008750, 0.000000, -0.003750, 0.000937
+#*# 	  -0.027500, 0.005625, 0.006875, -0.008438, -0.006875
+#*# 	  0.009375, 0.034062, 0.038125, 0.015312, 0.005625
 #*# tension = 0.2
 #*# min_x = 40.0
 #*# algo = bicubic
