--- a/probe.cfg
+++ b/probe.cfg
@@ -1,23 +1,20 @@
 [gcode_macro _Probe_Variables]
-variable_docklocation_x:        250     ; X Dock position
-variable_docklocation_y:        307     ; Y Dock position
-variable_docklocation_z:        25      ; Z dock position (-128 for a gantry/frame mount)
+variable_dock_location_x:       250     ; X Dock position
+variable_dock_location_y:       299.5   ; Y Dock position
+variable_dock_location_z:       30      ; Z dock position
 
-variable_fr:                    8000
+variable_fr:                    4000
 
-variable_attach_hop_y:         -20      ; How much to go away in Y to avoid colision with the dock
-Variable_attachmove_y:         -20
-Variable_attachmove_z:          3
+variable_probe_height:          15
+variable_attach_move_y:         -20     ; Distance to move Y before moving to attach
 
-variable_dock_hop_z:            10      ; How much to go away in Z to avoid colision of the probe
-variable_dockmove_x:           -30
-variable_dockmove_y:           -20
-variable_dockmove_z:            4
+variable_dock_move_x:           -35     ; Distance to move X after docked the probe
 
 variable_probe_attached:        False
 variable_probe_state:           False
+
 gcode:
-    ; Nothing
+    ; do nothing
 
 # Check to see if probe is where it is supposed to be after
 # attaching/docking maneuver and set homing error or shutdown
@@ -74,16 +71,14 @@ gcode:
 
     {% set fr = printer["gcode_macro _Probe_Variables"].fr %}
 
-    {% set docklocation_x = printer["gcode_macro _Probe_Variables"].docklocation_x %}
-    {% set docklocation_y = printer["gcode_macro _Probe_Variables"].docklocation_y %}
-    {% set docklocation_z = printer["gcode_macro _Probe_Variables"].docklocation_z %}
+    {% set dock_location_x = printer["gcode_macro _Probe_Variables"].dock_location_x %}
+    {% set dock_location_y = printer["gcode_macro _Probe_Variables"].dock_location_y %}
 
-    {% set attach_hop_y = printer["gcode_macro _Probe_Variables"].attach_hop_y %}
+    {% set probe_height  = printer["gcode_macro _Probe_Variables"].probe_height %}
 
-    {% set attachmove_y = printer["gcode_macro _Probe_Variables"].attachmove_y %}
-    {% set attachmove_z = printer["gcode_macro _Probe_Variables"].attachmove_z %}
+    {% set attach_move_y = printer["gcode_macro _Probe_Variables"].attach_move_y %}
 
-    # If x and y are not homed
+    # If not homed
     {% if not 'xyz' in printer.toolhead.homed_axes %}
         { action_raise_error("Please home first!") }
 
@@ -92,13 +87,15 @@ gcode:
         M117 Attaching Probe
 
         # Probe Attach
-        G91
-        G0 Y{attach_hop_y} F{fr}
-        G90
-        G0 X{docklocation_x} Y{docklocation_y + attachmove_y} Z{docklocation_z + attachmove_z} F{fr}
-        G0 Y{docklocation_y}
-        G0 Z{docklocation_z}
-        G0 Y{docklocation_y + attachmove_y}
+        {% if printer.toolhead.position.z < probe_height %}
+            G91
+            G0 Z{probe_height} F{fr}                   ; Position the toolhead in a safe position
+        {% endif %}
+        G90                                             ; Do the attach move
+        G0 Y{dock_location_y + attach_move_y}
+        G0 X{dock_location_x} F{fr}
+        G0 Y{dock_location_y} F{fr}
+        G0 Y{dock_location_y + attach_move_y}
 
         _CheckProbe action=attach
 
@@ -128,18 +125,14 @@ gcode:
 
     {% set fr = printer["gcode_macro _Probe_Variables"].fr %}
 
-    {% set docklocation_x = printer["gcode_macro _Probe_Variables"].docklocation_x %}
-    {% set docklocation_y = printer["gcode_macro _Probe_Variables"].docklocation_y %}
-    {% set docklocation_z = printer["gcode_macro _Probe_Variables"].docklocation_z %}
+    {% set dock_location_x = printer["gcode_macro _Probe_Variables"].dock_location_x %}
+    {% set dock_location_y = printer["gcode_macro _Probe_Variables"].dock_location_y %}
+    {% set dock_location_z = printer["gcode_macro _Probe_Variables"].dock_location_z %}
 
-    {% set dock_hop_z = printer["gcode_macro _Probe_Variables"].dock_hop_z %}
+    {% set probe_height = printer["gcode_macro _Probe_Variables"].probe_height %}
+    {% set dock_move_x = printer["gcode_macro _Probe_Variables"].dock_move_x %}
 
-    {% set attachmove_y = printer["gcode_macro _Probe_Variables"].attachmove_y %}
-    {% set attachmove_z = printer["gcode_macro _Probe_Variables"].attachmove_z %}
-
-    {% set dockmove_x = printer["gcode_macro _Probe_Variables"].dockmove_x %}
-    {% set dockmove_y = printer["gcode_macro _Probe_Variables"].dockmove_y %}
-    {% set dockmove_z = printer["gcode_macro _Probe_Variables"].dockmove_z %}
+     {% set attach_move_y = printer["gcode_macro _Probe_Variables"].attach_move_y %}
 
     # If x and y are not homed
     {% if not 'xyz' in printer.toolhead.homed_axes %}
@@ -150,15 +143,15 @@ gcode:
         M117 Docking Probe
 
         # Probe Dock
-        G91
-        G0 Z{dock_hop_z} F{fr}
-        G90
-        G0 X{docklocation_x} Y{docklocation_y + dockmove_y} F{fr}
-        G0 Z{docklocation_z} F{fr}
-        G0 Y{docklocation_y}
-        G0 X{docklocation_x - 10}
-        G0 Z{docklocation_z + dockmove_z}
-        G0 X{docklocation_x + dockmove_x}
+        {% if printer.toolhead.position.z < probe_height %}
+            G91
+            G0 Z{probe_height} F{fr}                   ; Position the toolhead in a safe position
+        {% endif %}
+        G90                                             ; Do the dock move
+        G0 Y{dock_location_y + attach_move_y}
+        G0 X{dock_location_x} F{fr}
+        G0 Y{dock_location_y} F{fr}
+        G0 X{dock_location_x + dock_move_x}
         M400
 
         _CheckProbe action=dock
