--- a/telegram.conf
+++ b/telegram.conf
@@ -1,9 +1,8 @@
-#  Please refer to the wiki(https://github.com/nlef/moonraker-telegram-bot/wiki) for detailed information on how to configure the bot
+[secrets]
+secrets_path: /home/pi/klipper_config/telegram.secrets.conf
 
 [bot]
 server: localhost
-bot_token: REDACTED
-chat_id: REDACTED
 light_device: chamberlight
 
 [camera]
