Atualizado para Voron Tap.

--- a/macros.cfg
+++ b/macros.cfg
@@ -3,8 +3,6 @@
 #####################################################################
 
 [gcode_macro global]
-variable_has_attachable_probe:      True
-
 variable_extruder_calibration_temp: 150
 
 variable_print_end_clean_temps:     200,190,180,170
@@ -272,10 +270,6 @@ gcode:
     {% endif %}
 
     M140 S{BED}                     ; Set bed temperature
-    SET_CALIBRATION_TEMP EXTRUDER=1 ; Set extruder calibration temperature
-    M190 S{BED}                     ; Wait bed temperature before calibrating Z
-
-    CALIBRATE_Z
 
     ; Apply Z offset after homing and Z Calibration
     {% if Z_OFFSET is defined %}
@@ -333,9 +327,11 @@ gcode:
 description: Cancel the actual running print
 rename_existing: CANCEL_PRINT_
 gcode:
-    CANCEL_PRINT_
+    SET_IDLE_TIMEOUT TIMEOUT={printer.configfile.settings.idle_timeout.timeout}              ; set timeout back to configured value
     CLEAR_PAUSE
+    SDCARD_RESET_FILE
     PRINT_END
+    CANCEL_PRINT_
 
 [gcode_macro PAUSE]
 description: Pause the actual running print
@@ -344,30 +340,53 @@ gcode:
     {% set g = printer["gcode_macro global"] %}
     {% set z_max = printer.toolhead.axis_maximum.z %}
 
-    PAUSE_
+    {% if printer['pause_resume'].is_paused|int == 0 %}
+        SET_GCODE_VARIABLE MACRO=RESUME VARIABLE=etemp VALUE={printer['extruder'].target}    ; set hotend temp variable for reference in resume macro
 
-    M83
-    G1 E-{g.retract_on_pause} F{g.retraction_fr}    ; Try to stop ozzing
+        SET_FILAMENT_SENSOR SENSOR=unklicky ENABLE=0                                         ; disable filament sensor
+        SAVE_GCODE_STATE NAME=PAUSE                                                          ; save current print position for resume
 
-    G91
-    G1 Z{z_max} F{g.moving_macros_fr}   ; Raise Z to a safe position before moving to the bucket position
-    BUCKET_POSITION
+        PAUSE_
+
+        {% if (printer.gcode_move.position.z + g.safe_z_rise) < printer.toolhead.axis_maximum.z %}       ; check that zhop doesn't exceed z max
+            G91                                                                              ; relative positioning
+            G1 Z{g.safe_z_rise} F{g.moving_macros_fr}                                        ; raise Z up by z hop amount
+        {% else %}
+            { action_respond_info("Pause zhop exceeds maximum Z height.") }                  ; if z max is exceeded, show message and set zhop value for resume to 0
+        {% endif %}
+
+        BUCKET_POSITION                                                                      ; park toolhead at bucket
+
+        SAVE_GCODE_STATE NAME=PAUSEPARK                                                      ; save parked position in case toolhead is moved during the pause (otherwise the return zhop can error)
+        M104 S0                                                                              ; turn off hotend
+        SET_IDLE_TIMEOUT TIMEOUT=10800                                                       ; set timeout to 3 hours
+
+    {% endif %}
 
 [gcode_macro RESUME]
 description: RESUME the actual paused print
 rename_existing: RESUME_
+variable_etemp: 0
 gcode:
     {% set g = printer["gcode_macro global"] %}
     {% set z_max = printer.toolhead.axis_maximum.z %}
 
-    PURGE_NOZZLE
+    {% if printer['pause_resume'].is_paused|int == 1 %}
+        SET_FILAMENT_SENSOR SENSOR=unklicky ENABLE=1                                         ; enable filament sensor
 
-    G91
-    G1 Z{z_max} F{g.moving_macros_fr}   ; Position
-    M_CENTER
+        SET_IDLE_TIMEOUT TIMEOUT={printer.configfile.settings.idle_timeout.timeout}          ; set timeout back to configured value
+        {% if etemp > 0 %}
+            M109 S{etemp|int}                                                                ; wait for hotend to heat back up
+        {% endif %}
 
-    RESUME_
+        RESTORE_GCODE_STATE NAME=PAUSEPARK MOVE=1 MOVE_SPEED=100                             ; go back to parked position in case toolhead was moved during pause (otherwise the return zhop can error)
 
+        PURGE_NOZZLE
+        CLEAN_NOZZLE RIGHT=1
+
+        RESTORE_GCODE_STATE NAME=PAUSE MOVE=1 MOVE_SPEED=60                                  ; restore position
+        BASE_RESUME                                                                          ; resume print
+    {% endif %}
 
 #####################################################################
 #    Calibration, Homing and Gantry related
@@ -393,15 +412,11 @@ gcode:
         M190 S{BED_TEMP}
 
         {% if BED_TEMP > 0 %}
-            ; Wait 1min the temperature become stable
-            M117 Waiting 60s Bed temperature to settle({BED_TEMP}C)...
-            G4 P15000
-            M117 Waiting 45s Bed temperature to settle({BED_TEMP}C)...
-            G4 P15000
-            M117 Waiting 30s Bed temperature to settle({BED_TEMP}C)...
-            G4 P15000
-            M117 Waiting 15s Bed temperature to settle({BED_TEMP}C)...
-            G4 P15000
+            ; Wait 20s the temperature become stable
+            M117 Waiting 20s Bed temperature to settle({BED_TEMP}C)...
+            G4 P10000
+            M117 Waiting 10s Bed temperature to settle({BED_TEMP}C)...
+            G4 P10000
         {% endif %}
     {% endif %}
 
@@ -437,24 +452,19 @@ description: Perform Mesh Bed Leveling with klicky automount
 gcode:
     {% set g = printer["gcode_macro global"] %}
 
+    {% if not 'xyz' in printer.toolhead.homed_axes %}
+        { action_raise_error("Must Home X, Y and Z Axis First!") }
+    {% endif %}
+
     STATUS_LEVELING
 
     SET_CALIBRATION_TEMP BED=1
-
-    {% if g.has_attachable_probe %}
-        _CheckProbe action=query
-        Attach_Probe
-    {% endif %}
 
     M117 Bed mesh calibrating
 
     BED_MESH_CALIBRATE_ {% for p in params
            %}{'%s=%s ' % (p, params[p])}{%
           endfor %}
-
-    {% if g.has_attachable_probe %}
-        Dock_Probe
-    {% endif %}
 
     SET_CALIBRATION_TEMP BED=0
 
@@ -463,7 +473,7 @@ gcode:
 
 [gcode_macro QUAD_GANTRY_LEVEL]
 rename_existing: QUAD_GANTRY_LEVEL_
-description: Conform a moving, twistable gantry to the shape of a stationary bed with/without dockable probe
+description: Conform a moving, twistable gantry to the shape of a stationary bed
 gcode:
     {% set g = printer["gcode_macro global"] %}
 
@@ -473,30 +483,13 @@ gcode:
 
     STATUS_LEVELING
 
-    ; Position probe near the bed so we try to get a stable temperature in the probe
-    {% if not g.has_attachable_probe %}
-        G90
-        M_CENTER
-        G1 Z3.5
-    {% endif %}
-
     SET_CALIBRATION_TEMP BED=1
 
     M117 Quad Gantry Leveling
-    {% if g.has_attachable_probe %}
-        _CheckProbe action=query
-        Attach_Probe
-    {% endif %}
-
-    M117 Quad gantry leveling
 
     QUAD_GANTRY_LEVEL_ {% for p in params
             %}{'%s=%s ' % (p, params[p])}{%
             endfor %}
-
-    {% if g.has_attachable_probe %}
-        Dock_Probe
-    {% endif %}
 
     SET_CALIBRATION_TEMP BED=0
 
@@ -505,7 +498,7 @@ gcode:
 
 [gcode_macro PROBE_ACCURACY]
 rename_existing: PROBE_ACCURACY_
-description:Probe Z-height accuracy at current XY position with klicky automount
+description:Probe Z-height accuracy at bed center
 gcode:
     {% set g = printer["gcode_macro global"] %}
 
@@ -513,21 +506,11 @@ gcode:
         { action_raise_error("Must Home X, Y and Z Axis First!") }
     {% endif %}
 
-    {% if g.has_attachable_probe %}
-        _CheckProbe action=query
-        G90
-        Attach_Probe
-    {% endif %}
-
     M_CENTER
 
     PROBE_ACCURACY_ {% for p in params
             %}{'%s=%s ' % (p, params[p])}{%
             endfor %}
-
-    {% if g.has_attachable_probe %}
-        Dock_Probe
-    {% endif %}
 
 [gcode_macro PROBE_CALIBRATE]
 rename_existing: PROBE_CALIBRATE_
@@ -538,15 +521,11 @@ gcode:
         { action_raise_error("Must Home X, Y and Z Axis First!") }
     {% endif %}
 
-    {% if g.has_attachable_probe %}
-        { action_raise_error("PROBE_CALIBRATE disabled with attachable probe!") }
-    {% else %}
-        M_CENTER
+    M_CENTER
 
-        PROBE_CALIBRATE_ {% for p in params
-                %}{'%s=%s ' % (p, params[p])}{%
-                endfor %}
-    {% endif %}
+    PROBE_CALIBRATE_ {% for p in params
+            %}{'%s=%s ' % (p, params[p])}{%
+            endfor %}
 
 [gcode_macro G32]
 gcode:
@@ -681,3 +660,7 @@ gcode:
     {% else %}
         M118 Extrude factor {printer.gcode_move.extrude_factor * 100}%
     {% endif %}
+
+[gcode_macro M600]
+gcode:
+    PAUSE
