--- a/printer.cfg
+++ b/printer.cfg
@@ -106,36 +106,47 @@ gcode_id: C
 sensor_type: temperature_host
 max_temp: 80
 
-# Spider MCU Core Temperature Sensor
-[temperature_sensor MCU]
-sensor_type: temperature_mcu
-max_temp: 80
+# # Spider MCU Core Temperature Sensor
+# [temperature_sensor MCU]
+# sensor_type: temperature_mcu
+# max_temp: 80
 
 #####################################################################
 #    Homing, Gantry and Bed Adjustments
 #####################################################################
 
 [safe_z_home]
-home_xy_position:   204.30,303.5
+home_xy_position:   150,150
 speed:              50
 z_hop_speed:        25
-z_hop:              15
+z_hop:              5
 
 ##--------------------------------------------------------------------
 
 [probe]
-# 0.08 diferença entre 20C e 100C
 pin:                        ^PA3
-x_offset:                   0
-y_offset:                   25.0
-z_offset:                   14.2
-speed:                      25
-lift_speed:                 25
-samples:                    10
-samples_result:             median
-sample_retract_dist:        0.5
-samples_tolerance:          0.006
-samples_tolerance_retries:  10
+z_offset:                   -0.690
+speed:                      5
+samples:                    5
+sample_retract_dist:        2.0
+samples_tolerance:          0.05
+samples_tolerance_retries:  3
+activate_gcode:
+    {% set PROBE_TEMP = 150 %}
+    {% set MAX_TEMP = PROBE_TEMP + 5 %}
+    {% set ACTUAL_TEMP = printer.extruder.temperature %}
+    {% set TARGET_TEMP = printer.extruder.target %}
+
+    {% if TARGET_TEMP > PROBE_TEMP %}
+        { action_respond_info('Extruder temperature target of %.1fC is too high, lowering to %.1fC' % (TARGET_TEMP, PROBE_TEMP)) }
+        M109 S{ PROBE_TEMP }
+    {% else %}
+        # Temperature target is already low enough, but nozzle may still be too hot.
+        {% if ACTUAL_TEMP > MAX_TEMP %}
+            { action_respond_info('Extruder temperature %.1fC is still too high, waiting until below %.1fC' % (ACTUAL_TEMP, MAX_TEMP)) }
+            TEMPERATURE_WAIT SENSOR=extruder MAXIMUM={ MAX_TEMP }
+        {% endif %}
+    {% endif %}
 
 ##--------------------------------------------------------------------
 
@@ -149,7 +160,7 @@ points:
     250,225
     250,25
 speed:              300
-horizontal_move_z:  20
+horizontal_move_z:  5
 retries:            5
 retry_tolerance:    0.0075
 max_adjust:         10
@@ -158,7 +169,7 @@ max_adjust:         10
 
 [bed_mesh]
 speed: 300
-horizontal_move_z: 15
+horizontal_move_z: 5
 mesh_min: 40, 40
 mesh_max: 260, 260
 fade_start: 0.6
@@ -167,23 +178,18 @@ probe_count: 5,5
 algorithm: bicubic
 relative_reference_index: 12
 
-##--------------------------------------------------------------------
-
-[z_calibration]
-nozzle_xy_position: 204.30,303.50
-switch_xy_position: 196.00,281.50
-bed_xy_position:    150,150
-switch_offset:      3.37
-speed:              300
-probing_speed:      25
-probing_second_speed: 25
-start_gcode:
-    Attach_Probe
-    ; Clear probe from the dock(Otherwise it will be kicked while probing nozzle)
-    G90
-    G1 X196
-end_gcode:
-    Dock_Probe
+#####################################################################
+#    Filament
+#####################################################################
+[filament_switch_sensor unklicky]
+switch_pin: ^PC1
+pause_on_runout: TRUE
+event_delay: 3.0
+pause_delay: 0.5
+insert_gcode:
+    M117 Insert Detected
+runout_gcode:
+    M117 Runout Detected
 
 #####################################################################
 #    Resonance
@@ -202,12 +208,13 @@ probe_points:
     150, 140, 20
 
 [input_shaper]
-# Measured on 25/07/2022 - 18:19
-# Printer with some corner brackets(left side and front)
-shaper_type_x = mzv
-shaper_freq_x = 55.0
-shaper_type_y = mzv
-shaper_freq_y = 40.8
+# Measured on 11/12/2022 - 19:00
+# Printer with some corner brackets(all sides)
+shaper_type_x = 3hump_ei
+shaper_freq_x = 95.0
+shaper_type_y = zv
+shaper_freq_y = 44.8
+
 # Calculating the best input shaper parameters for x axis
 # Fitted shaper 'zv' frequency = 55.8 Hz (vibrations = 3.5%, smoothing ~= 0.056)
 # To avoid too much smoothing with 'zv', suggested max_accel <= 12100 mm/sec^2
@@ -237,19 +244,10 @@ shaper_freq_y = 40.8
 # Shaper calibration data written to /tmp/calibration_data_y_20220725_172420.csv file
 
 #####################################################################
-#    Filament
-#####################################################################
-
-# [filament_switch_sensor runout]
-# pause_on_runout: True
-# switch_pin: ^PA0
-
-#####################################################################
 #    Macros
 #####################################################################
 
 [include macros.cfg]
-[include probe.cfg]
 
 #####################################################################
 #    Lights
@@ -263,11 +261,11 @@ shaper_freq_y = 40.8
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.003750, 0.010938, 0.014375, -0.011562, -0.003750
-#*# 	  -0.036250, -0.009687, -0.000937, -0.016250, -0.010625
-#*# 	  -0.041875, -0.008750, 0.000000, -0.003750, 0.000937
-#*# 	  -0.027500, 0.005625, 0.006875, -0.008438, -0.006875
-#*# 	  0.009375, 0.034062, 0.038125, 0.015312, 0.005625
+#*# 	  -0.002250, 0.029875, 0.012875, -0.002250, 0.018500
+#*# 	  -0.017875, 0.003750, 0.007750, 0.008750, 0.031375
+#*# 	  -0.034875, -0.002500, 0.000000, 0.001250, 0.013125
+#*# 	  -0.025625, -0.002750, -0.001125, -0.011250, -0.002500
+#*# 	  0.007125, 0.033125, 0.024875, -0.002750, -0.011125
 #*# tension = 0.2
 #*# min_x = 40.0
 #*# algo = bicubic
