--- a/motors.cfg
+++ b/motors.cfg
@@ -7,14 +7,13 @@ rotation_distance:      40
 gear_ratio:             80:16
 microsteps:             64
 
-# For textured PEI sheet: Offset: -0.07
-position_endstop:       1.34
+# Voron Tap
+endstop_pin:            probe:z_virtual_endstop
 
-endstop_pin:            ^PA0
 position_max:           275
-position_min:           0
-homing_speed:           25
-second_homing_speed:    25
+position_min:           -2
+homing_speed:           15
+second_homing_speed:    5
 homing_retract_dist:    3
 
 [tmc2209 stepper_z]
